[package]
name = "brainhecc"
description = "A Brainhecc compiler written in Rust."
version = "0.1.0"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/trimorphdev/brainhecc"
homepage = "https://github.com/trimorphdev/brainhecc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "brainhecc"

[dependencies]
cranelift = "0.76.0"
cranelift-codegen = "0.76.0"
cranelift-module = "0.76.0"
cranelift-native = "0.76.0"
cranelift-object = "0.76.0"
target-lexicon = "0.12.2"